// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabItem> should render a tab item correctly with minimum props 1`] = `
<div
  aria-selected={false}
  className="TabItem"
  onClick={[Function]}
  role="tab"
  tabIndex={0}
>
  Tab label
</div>
`;

exports[`<TabItem> should render correctly with all props 1`] = `
<div
  aria-selected={true}
  className="TabItem TabItem--isActive TabItem--isBlock"
  onClick={[Function]}
  role="tab"
  tabIndex={0}
>
  Tab label 
  <span
    style={
      Object {
        "color": "grey",
      }
    }
  >
    (3)
  </span>
</div>
`;
